Implement organization multi-type aggregate editing